--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@livekit/components-react": "^2.9.15",
+    "@livekit/components-styles": "^1.1.6",
     "livekit-client": "^2.15.8",
     "next": "15.5.4",
     "react": "19.1.0",
