--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@livekit/components-react": "^2.9.15",
     "@livekit/components-styles": "^1.1.6",
-    "firebase": "^12.3.0",
+    "appwrite": "^21.2.1",
     "livekit-client": "^2.15.8",
     "next": "15.5.4",
     "react": "19.1.0",
